# git-vanity

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  bench.sh  build.rs  demo.md
.github/workflows/: bench.yml  ci.yml  release.yml
Formula/: git-vanity.rb
benches/: hash_bench.rs
demo/: 01-prefix.sh  02-preset.sh  03-random.sh  04-repeat.sh  05-pair.sh  06-structured.sh  07-regex.sh  08-match-end.sh  09-match-contains.sh  10-dry-run.sh  11-debug.sh  12-quiet-vs-normal.sh  13-threads.sh  14-timeout.sh  15-max-attempts.sh  16-message.sh  17-no-repeat.sh  18-list-presets.sh  19-show.sh  20-log.sh  21-undo.sh  22-invalid-pattern.sh  23-invalid-preset.sh  24-invalid-position.sh  25-no-pattern.sh  26-not-a-repo.sh  generate.sh  lib.sh
hooks/: post-commit
npm/: package.json
src/: commit.rs  git.rs  hasher.rs  main.rs  nonce.rs  pattern.rs  preset.rs  worker.rs
tests/: integration.rs
