[package]
name = "git-vanity"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Generate Git commit hashes matching custom patterns (vanity hashes)"
license = "BUSL-1.1"
authors = ["hong4rc"]
repository = "https://github.com/hong4rc/git-vanity"
homepage = "https://github.com/hong4rc/git-vanity"
readme = "README.md"
keywords = ["git", "vanity", "hash", "cli", "sha1"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["bench.sh", "benches/", "Formula/", "npm/", "hooks/"]

[[bin]]
name = "git-vanity"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha1 = { version = "0.10", features = ["compress"] }
num_cpus = "1.16"
hex = "0.4"
regex = "1"
ctrlc = "3"

[features]
default = ["sha1-asm"]
sha1-asm = ["sha1/asm"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hash_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 3
